--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-	<title>Ecommerce</title>
+	<title>FleetCart</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<script src="https://maxscdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Gentium+Basic&family=Libre+Baskerville&family=Work+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
 	<script type="text/javascript">
 		var user = '{{request.user}}'
@@ -53,7 +54,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <h5><strong><a class="navbar-brand" href="{% url 'store' %}" style="color: white">Ecommerce</a></strong></h5>
+	  <h5><strong><a class="navbar-brand" href="{% url 'store' %}" style="color: white">FleetCart</a></strong></h5>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -67,7 +68,7 @@
 	    </ul>
 	    <div class="form-inline my-2 my-lg-0">
 	    	
-	    	<form method="get" action="{% url 'search' %}" class="form-inline my-2 my-lg-0">
+	    	<form method="get" action="{% url 'search' %}" class="search form-inline my-2 my-lg-0">
 					<input type="search" name="search" aria-label="Search" placeholder="Search" class="form-control mr-sm-2">
 					<button class="btn btn-success my-2 mr-sm-3" type="submit">Search</button>
 			</form>
@@ -113,10 +114,10 @@
 		</div>
 	</div>
 	<footer class="footer">
-		<p style="text-align: center;">No CopyRight infringement intended!</p>
+		<p style="text-align: center;">&copy; FleetCart | Developed By Zuhair Abbas</p>
 	</footer>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+	
 	<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="{% static 'store/js/main.js' %}"></script>
