--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -116,6 +116,8 @@
 	<footer class="footer">
 		<p style="text-align: center;">&copy; FleetCart | Developed By Zuhair Abbas</p>
 	</footer>
+	
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 	
 	<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
